--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "firebase": "^9.22.2",
     "nodemon": "^2.0.22"
   }
 }
