--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "KH & AMM",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "firebase": "^9.22.2",
+    "fs": "^0.0.1-security",
     "nodemon": "^2.0.22"
   }
 }
