--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "csv-parser": "^3.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "firebase": "^9.22.2",
     "fs": "^0.0.1-security",
     "nodemon": "^2.0.22"
