--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-rate-limit": "^6.7.0",
     "firebase": "^9.22.2",
     "fs": "^0.0.1-security",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22"
   }
 }
